k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: qotd-python-app
    app.kubernetes.io/component: qotd-python-app
    app.kubernetes.io/instance: qotd-python-app
    app.kubernetes.io/name: qotd-python
  name: qotd-python-app
  namespace: pipelines-tutorial
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: 10000-tcp
    port: 10000
  selector:
    deployment: qotd-python-app
