k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: qotd-python-app
    app.kubernetes.io/component: qotd-python-app
    app.kubernetes.io/instance: qotd-python-app
    app.kubernetes.io/name: qotd-python
  name: qotd-python-app
  namespace: pipelines-tutorial
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: qotd-python-app
    weight: 100
  wildcardPolicy: None
